# domotecbot

./: bot.py  pyproject.toml
tgbot/: config.py
tgbot/dialogs/: __init__.py
tgbot/dialogs/estimate/: __init__.py  constants.py  events.py  getters.py  keyboards.py  onclick.py  states.py  whenable.py  windows.py
tgbot/handlers/: admin.py  sound_to_text.py  user.py
tgbot/middlewares/: config.py
tgbot/models/: base.py  costing_data.py  db_commands.py
tgbot/services/: vosk.py
tgbot/utils/: calculator.py  decimals.py
