[tool.poetry]
name = "domotecbot"
version = "0.1.0"
description = ""
authors = ["akm77 <aleksey.kotryakhov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = ">=3.0.0b7"
aiogram-dialog = "2.0.0b17"
sqlalchemy = "^2.0.9"
aiosqlite = "^0.18.0"
redis = "^4.5.4"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
sly = "^0.5"
vosk = "0.3.42"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

